--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.0",
+    "nodemailer": "^6.9.1",
     "stripe": "^11.7.0",
     "twilio": "^3.84.1"
   },
